# phylogenetic_harness

./: .gitignore  .pytest_audit.jsonl.hwm  PRODUCTION.md  QUICKSTART.md  README.md  pyproject.toml  ruff.toml
examples/: fetch_ape_mt_genes.sh  fetch_ape_nuclear_genes.py
harness/: __init__.py  aggregate.py  approval.py  audit.py  autoreport.py  bio.py  bio_report.py  cli.py  clock.py  confine.py  datasets.py  diff.py  environment.py  events.py  executor.py  genome_phylo.py  hardware.py  hooks.py  ids.py  integrity.py  killswitch.py  leases.py  logging_json.py  manifest.py  phylo_guards.py  policy.py  recovery.py  redaction.py  registry.py  report.py  resources.py  resume.py  run.py  runner.py  sandbox.py  scheduler.py  science.py  seeds.py  signals.py  states.py  (+10 more)
schemas/: dataset.manifest.example.yaml
scripts/: ci.sh  harness-guard.sh
tests/: conftest.py  test_agents.py  test_approval.py  test_audit_failclosed.py  test_audit_hmac.py  test_audit_truncation.py  test_bio_comparative.py  test_bio_phylo.py  test_bio_pipeline.py  test_bio_report.py  test_concurrency_dedup.py  test_concurrency_real.py  test_confinement.py  test_containment.py  test_csv_integrity.py  test_datasets.py  test_environment.py  test_event_throughput.py  test_events_ids.py  test_executor.py  test_fuzz_validators.py  test_genome_phylo.py  test_governance.py  test_hooks.py  test_injection.py  test_integrity.py  test_manifest_paths.py  test_p1_stabilize.py  test_p2_scale.py  test_phylo_guards.py  test_pipeline_resume.py  test_process_kill_real.py  test_process_tree_kill.py  test_production_gate.py  (+30 more)
(+20 files in other folders)
